--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
-  background-color: gray;
+  background-color: #D8D8E6;
 }
 
 .board {
@@ -16,19 +16,20 @@ body {
 .column {
   width: 25%;
   margin-right: 25px;
-  border: 1px black solid;
 }
 
 .column-name {
-  border: 1px black solid;
+  padding: 10px;
 }
 
 .card {
-  padding-bottom: 5px;
-  color: white;
+  background-color: white;
+  color: #0C0C0C;
+  margin: 5px 0;
+  padding: 20px;
 }
 
 .column-name {
-  background-color: purple;
+  background-color: #B0A5DE;
   color: white;
 }
